--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python-dotenv==1.0.1
 fastapi[all]==0.115.11
 python-telegram-bot[all]==21.11.1
+aiofiles==24.1.0
+aiohttp==3.11.13
 aiosqlite==0.21.0
-requests==2.32.3
+cachebox==1.0.0
