--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ WEBHOOK_BASE_URL=https://abc12-34-567-890-64.ngrok-free.app
 # To enhance security and check if webhooks set by our bot, generate a token and put it here
 # https://core.telegram.org/bots/api#setwebhook
 TG_SECRET_TOKEN=hadwadawda82e2huhdd7dhauid
+LOG_FILENAME=Logs.log
 # Timezone of Logging
-TZ=Asia/Tehran
+LOGGER_TIMEZONE=Asia/Tehran
 FASTAPI_PORT=8000
