🩹 Fix docker network IP

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ LOG_FILENAME=Logs.log
 # Timezone of Logging
 LOGGER_TIMEZONE=Asia/Tehran
 FASTAPI_PORT=8000
-DOCKER_NETWORK_IP=172.20.0.4/16
+# Fixed Docker network configuration (matches docker-compose.yml)
+# This is the gateway IP of the hidego-network bridge
+DOCKER_NETWORK_IP=172.30.0.1/24
