--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,3 +49,7 @@ services:
 networks:
   hidego-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.30.0.0/24
+          gateway: 172.30.0.1
