🔧 Update FastAPI port ❌ 8000 ✅ 13360

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ BOT_CREATOR_USERNAME=@HidEgoBot
 MAIN_BOT_TOKEN=123456789:HDWUhuahhawudw7dhwui-dbabdba7dauawb
 # For local development, use ngrok to create a secure tunnel:
 # 1. Install ngrok
-# 2. Run: ngrok http 8000
+# 2. Run: ngrok http 13360
 # 3. Copy the generated HTTPS URL (e.g., https://xxxx.ngrok.io)
 # For production use Cloudflare Tunnel with custom domain
 WEBHOOK_BASE_URL=https://abc12-34-567-890-64.ngrok-free.app
@@ -12,7 +12,8 @@ TG_SECRET_TOKEN=hadwadawda82e2huhdd7dhauid
 LOG_FILENAME=Logs.log
 # Timezone of Logging
 LOGGER_TIMEZONE=Asia/Tehran
-FASTAPI_PORT=8000
+# Default FastAPI port (hIddEnEGO = "13360" leetspeak)
+FASTAPI_PORT=13360
 # Fixed Docker network configuration (matches docker-compose.yml)
 # This is the gateway IP of the hidego-network bridge
 DOCKER_NETWORK_IP=172.30.0.1/24
